<resources>
    <string name="app_name">Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculation">計算</string>
    <string name="search">検索</string>
    <string name="Date">日付</string>
    <string name="Name">名前</string>
    <string name="pop_up_image">pop_up_menu_button</string>
    <string name="add_calculation">AddCalculation</string>
    <string name="new_calculation">新規..</string>
    <string name="delete_icon_button">delete_icon</string>
    <string name="navigation_button_icon">navigation_icon</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="move_trashcan">ゴミ箱に入れる</string>
    <string name="move_update_fragment">移動する</string>
    <string name="rename_view">Rename item title</string>
    <string name="title">Title</string>
    <string name="navigate_home_screen">Navigate_Home_Screen</string>
    <string name="calculation_list">一覧</string>
    <string name="demo_formulation">20×5</string>
    <string name="answer">= 100</string>
    <string name="Delete_Formula_input">delete_formula_input</string>
    <string name="ac">AC</string>
    <string name="percent">%</string>
    <string name="divide">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiple">×</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">ー</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_00">00</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="delete_calculation">計算の削除</string>
    <string name="confirm_delete">計算を削除しますか? (1度削除すると元に戻せません)</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="above">↑</string>
    <string name="new_title">New</string>
</resources>