<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/pop_up_window_bg">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/content_edit_textview"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/search_view_bg"
        android:hint="@string/pop_up_image"
        android:text="Name"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/navigation_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_edit_textview"
        app:srcCompat="@drawable/ic_exit_to_app"
        android:contentDescription="@string/navigation_button_icon" />

    <TextView
        android:id="@+id/navigation_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="8dp"
        android:text="@string/move_update_fragment"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/dark_gray"
        app:layout_constraintBottom_toBottomOf="@+id/navigation_imageView"
        app:layout_constraintStart_toEndOf="@+id/navigation_imageView"
        app:layout_constraintTop_toTopOf="@+id/navigation_imageView" />

    <View
        android:id="@+id/navigation_view_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:background="@color/dark_gray"
        app:layout_constraintTop_toBottomOf="@+id/navigation_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/navigation_textView" />

    <ImageView
        android:id="@+id/delete_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/delete_icon_button"
        app:layout_constraintEnd_toEndOf="@+id/navigation_imageView"
        app:layout_constraintStart_toStartOf="@+id/navigation_imageView"
        app:layout_constraintTop_toBottomOf="@+id/navigation_imageView"
        app:srcCompat="@drawable/ic_delete" />

    <TextView
        android:id="@+id/delete_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="8dp"
        android:text="@string/move_trashcan"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/dark_gray"
        app:layout_constraintBottom_toBottomOf="@+id/delete_imageView"
        app:layout_constraintStart_toEndOf="@+id/delete_imageView"
        app:layout_constraintTop_toTopOf="@+id/delete_imageView" />

    <View
        android:id="@+id/delete_view_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:background="@color/dark_gray"
        app:layout_constraintTop_toBottomOf="@+id/delete_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/delete_textView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        style="@style/PopUpWindowConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/save"
        android:textColor="@color/dark_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/delete_imageView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        style="@style/PopUpWindowConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/cancel"
        android:textColor="@color/dark_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/save_button" />

</androidx.constraintlayout.widget.ConstraintLayout>