<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/pop_up_window_bg">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/calculation_title_textview_field"
        style="@style/TitleTextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/title"
        android:textColorHint="@color/white"
        app:helperText="*Required*"
        app:helperTextTextColor="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:counterTextColor="@color/white"
        app:endIconMode="clear_text"
        app:endIconTint="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/calculation_title_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/divider_above_button"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculation_title_textview_field" />

    <TextView
        android:id="@+id/save_text_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/save"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel_text_button"
        app:layout_constraintTop_toBottomOf="@id/divider_above_button" />

    <View
        android:id="@+id/divider_button"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save_text_button"
        app:layout_constraintStart_toEndOf="@id/cancel_text_button"
        app:layout_constraintTop_toBottomOf="@id/divider_above_button" />

    <TextView
        android:id="@+id/cancel_text_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save_text_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_above_button" />

</androidx.constraintlayout.widget.ConstraintLayout>