<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_list_scene">

    <TextView
        android:id="@+id/list_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:text="@string/calculation"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/list_content_search_view"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/search_view_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_title_textView"
        app:queryBackground="@android:color/transparent"
        app:queryHint="@string/search" />

    <View
        android:id="@+id/search_view_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        android:background="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="@+id/list_content_search_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/list_content_search_view"
        app:layout_constraintTop_toBottomOf="@+id/list_content_search_view" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_content_search_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/nested_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/materialButtonToggleGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:checkedButton="@id/date_sort_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/date_sort_button"
                    style="@style/ToggleButtonColor"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:text="@string/Date"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/name_sort_button"
                    style="@style/ToggleButtonColor"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:text="@string/Name"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_recyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/nested_constraint_layout"
                app:layout_constraintEnd_toEndOf="@+id/nested_constraint_layout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/nested_constraint_layout"
                app:layout_constraintTop_toBottomOf="@+id/materialButtonToggleGroup"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>